@@ -1,10 +1,11 @@
-/**
- *  Proj:   Moose
- *  File:   SongController.java
- *  Desc:   Controller class for Frame, works directly with the data based on input from Frame UI
- *
- *  Copyright Pat Ripley 2018
+/*
+   Proj:   Moose
+   File:   SongController.java
+   Desc:   Controller class for Frame, works directly with the data based on input from Frame UI
+
+   Copyright Pat Ripley 2018
  */
+
 // package
 package moose.controllers;
 
@@ -12,24 +13,19 @@ package moose.controllers;
 import com.mpatric.mp3agic.*;
 
 import moose.services.AutoTaggingService;
+import moose.utilities.Constants;
 import moose.utilities.Logger;
 import moose.Main;
 import moose.objects.Song;
 import moose.utilities.Utils;
 
 import javax.swing.*;
-import javax.swing.filechooser.FileNameExtensionFilter;
 import java.io.File;
 import java.io.IOException;
-import java.io.RandomAccessFile;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import moose.views.Frame;
-import moose.views.modals.AlbumArtFinderFrame;
+import java.util.Objects;
 
 // class SongController
 public class SongController {
@@ -45,7 +41,7 @@ public class SongController {
 
     // ArrayLists
     HashMap<Integer, Song> songs = new HashMap<>();     // hashmap to contain Song objects
-    ArrayList edited_songs = new ArrayList();           // arraylist to contain indices of edited songs to save
+    ArrayList<Integer> edited_songs = new ArrayList<>();           // arraylist to contain indices of edited songs to save
 
     /**
      * Default constructor
@@ -56,7 +52,7 @@ public class SongController {
     /**
      * Sets the table ivar
      *
-     * @param table
+     * @param table, the table to set
      */
     public void setTable(JTable table) {
         this.table = table;
@@ -80,7 +76,7 @@ public class SongController {
     public Song getSongFromFile(File file) {
 
         // regex for checking tracks/disks for "/0" or similar
-        String regex = "\\/\\d*";
+        String regex = "/\\d*";
 
         // mp3agic Mp3File object, used for the id3tags
         Mp3File mp3file;
@@ -100,6 +96,7 @@ public class SongController {
         }
 
         // get the id3v2 info
+        assert mp3file != null;
         String title = mp3file.getId3v2Tag().getTitle();
         String artist = mp3file.getId3v2Tag().getArtist();
         String album = mp3file.getId3v2Tag().getAlbum();
@@ -168,10 +165,9 @@ public class SongController {
         if (!edited_songs.contains(index)) {
             edited_songs.add(index);
             int row = getRow(index);
-            Main.frame.setRowIcon(Frame.EDITED, row);
-        } else {
-            // do nothing, index is already added
+            Main.frame.setRowIcon(Constants.EDITED, row);
         }
+        // else do nothing, index is already added
     }
 
     /**
@@ -193,22 +189,21 @@ public class SongController {
     /**
      * Helper Function Gets the index at the specified row
      *
-     * @param row
-     * @return
+     * @param row, the row to search from
+     * @return the index of that row
      */
     public int getIndex(int row) {
         row = table.convertRowIndexToModel(row);
-        return Integer.valueOf(table.getModel().getValueAt(row, 12).toString());
+        return Integer.parseInt(table.getModel().getValueAt(row, 12).toString());
     }
 
     /**
      * Helper function to set the file of the song file in the songs arraylist.
      *
      * @param index, the index of the song
-     * @param old_file, the file to replace
      * @param new_file, the new file to set
      */
-    public void setFile(int index, File old_file, File new_file) {
+    public void setFile(int index, File new_file) {
         songs.get(index).setFile(new_file);
         songEdited(index);
     }
@@ -254,7 +249,7 @@ public class SongController {
      * @param albumartist, the albumartist to set
      */
     public void setAlbumArtist(int index, String albumartist) {
-        songs.get(index).setAlbumartist(albumartist);
+        songs.get(index).setAlbumArtist(albumartist);
         songEdited(index);
     }
 
@@ -326,7 +321,7 @@ public class SongController {
     }
 
     /**
-     * Goes through the edited_songs array and saves each one TODO confirm that
+     * Goes through the edited_songs array and saves each one
      * this works
      */
     public void saveAll() {
@@ -352,8 +347,8 @@ public class SongController {
         int count = 0;
 
         // traverse the array of rows and play each file sequentially
-        for (int i = 0; i < selectedRows.length; i++) {
-            int row = table.convertRowIndexToModel(selectedRows[i]);    // get the row
+        for (int selectedRow : selectedRows) {
+            int row = table.convertRowIndexToModel(selectedRow);    // get the row
             int index = getIndex(row);
             save(index);
             count++;
@@ -383,10 +378,11 @@ public class SongController {
 
             // set all the text based items
             try {
+                assert mp3file != null;
                 mp3file.getId3v2Tag().setTitle(s.getTitle());
                 mp3file.getId3v2Tag().setArtist(s.getArtist());
                 mp3file.getId3v2Tag().setAlbum(s.getAlbum());
-                mp3file.getId3v2Tag().setAlbumArtist(s.getAlbumartist());
+                mp3file.getId3v2Tag().setAlbumArtist(s.getAlbumArtist());
                 mp3file.getId3v2Tag().setGenreDescription(s.getGenre());
                 mp3file.getId3v2Tag().setYear(s.getYear());
                 mp3file.getId3v2Tag().setTrack(s.getFullTrackString());
@@ -406,7 +402,7 @@ public class SongController {
             save(mp3file, file);
 
             // update the row graphic
-            Main.frame.setRowIcon(Main.frame.SAVED, getRow(index));
+            Main.frame.setRowIcon(Constants.SAVED, getRow(index));
 
             // done saving, remove it
             // gives an IndexOutOfBoundsException when trying to remove() with one element in it
@@ -414,7 +410,7 @@ public class SongController {
                 edited_songs.clear();
             } else if (edited_songs.size() > 1) {
                 // edited_songs.remove(index);
-                edited_songs.remove(new Integer(index));
+                edited_songs.remove(Integer.valueOf(index));
             }
         } else {
             return false;
@@ -425,8 +421,8 @@ public class SongController {
     /**
      * Saves an individual file
      *
-     * @param mp3file
-     * @param file
+     * @param mp3file, the mp3 file to source the information from
+     * @param file, the actual file to save as
      */
     public void save(Mp3File mp3file, File file) {
         try {
@@ -434,11 +430,16 @@ public class SongController {
             mp3file.save(file.getAbsolutePath().replace(".mp3", "_.mp3"));
 
             // delete the old file
-            file.delete();
+            if (!file.delete()) {
+                logger.logError("Couldn't delete the file to save! Path: " + file.getPath());
+                return;
+            }
 
             // rename the new file to match the old
             File newFile = new File(file.getAbsolutePath().replace(".mp3", "_.mp3"));
-            newFile.renameTo(file);
+            if (!newFile.renameTo(file)) {
+                logger.logError("Couldn't rename the new mp3 back to the original after deleting! Path: " + newFile.getPath());
+            }
 
         } catch (IOException | NotSupportedException ex) {
             logger.logError("Exception when trying to save a song!", ex);
@@ -471,8 +472,10 @@ public class SongController {
                                 String fileName = table.getValueAt(i, j).toString();
                                 File new_file = new File(path + "//" + fileName + ".mp3");
 
-                                setFile(index, old_file, new_file);
-                                old_file.renameTo(new_file);
+                                setFile(index, new_file);
+                                if (!old_file.renameTo(new_file)) {
+                                    logger.logError("Couldn't rename the file from Find and Replace! File: " + old_file.getPath());
+                                }
                                 table.getModel().setValueAt(new_file, i, 1);
                             }
                             count++;
@@ -531,14 +534,14 @@ public class SongController {
      * Method for removing album art for songs manually This method is called
      * when the "Remove" selection is pressed in the context menu
      *
-     * @param selectedRows
+     * @param selectedRows, the rows selected on the table
      */
     public void removeAlbumArt(int[] selectedRows) {
 
-        for (int i = 0; i < selectedRows.length; i++) {
+        for (int selectedRow : selectedRows) {
 
             // get the row and index of the track
-            int row = table.convertRowIndexToModel(selectedRows[i]);
+            int row = table.convertRowIndexToModel(selectedRow);
             int index = getIndex(row);
 
             // update the songs array
@@ -570,29 +573,30 @@ public class SongController {
      */
     public void moveFiles(int[] selectedRows) {
 
-        File directory = Utils.launchJFileChooser("Choose the destination folder...", "Select", JFileChooser.DIRECTORIES_ONLY, false)[0];
+        File directory = Objects.requireNonNull(
+                Utils.launchJFileChooser("Choose the destination folder...", "Select", JFileChooser.DIRECTORIES_ONLY, false))[0];
         if (directory != null) {
-            for (int i = 0; i < selectedRows.length; i++) {
-                File old_file = (File) table.getModel().getValueAt(selectedRows[i], 1);
-                File new_location = directory;
-                int row = selectedRows[i];
-                moveFile(row, old_file, new_location);
+            for (int selectedRow : selectedRows) {
+                File old_file = (File) table.getModel().getValueAt(selectedRow, 1);
+                moveFile(selectedRow, old_file, directory);
             }
-        } else {
-            // do nothing, user exited or pressed cancel
         }
+        // else do nothing, user exited or pressed cancel
     }
 
     /**
      * Function that actually moves the file
      *
-     * @param row
-     * @param old_file
-     * @param new_location
+     * @param row, the row on the table
+     * @param old_file, the file to move
+     * @param new_location, the destination file to move it to
      */
     public void moveFile(int row, File old_file, File new_location) {
         File new_file = new File(new_location.getPath() + "/" + old_file.getName());
-        old_file.renameTo(new_file);
+        if (!old_file.renameTo(new_file)) {
+            logger.logError("Couldn't move file " + old_file.getPath() + " to " + new_location.getPath() + "!");
+            return;
+        }
 
         int index = getIndex(row);
         songs.get(index).setFile(new_file);
@@ -606,8 +610,8 @@ public class SongController {
      */
     public void playFiles(int[] selectedRows) {
         // traverse the array of rows and play each file sequentially
-        for (int i = 0; i < selectedRows.length; i++) {
-            int row = table.convertRowIndexToModel(selectedRows[i]);    // get the row
+        for (int selectedRow : selectedRows) {
+            int row = table.convertRowIndexToModel(selectedRow);    // get the row
             File file = (File) table.getModel().getValueAt(row, 1);
             try {
                 Utils.openFile(file);
